new icons, colour fixes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="project-container project-card">
                 <a href="#contact">
                   <img
-                        src="assets/images/whitelist.png"
+                        src="assets/images/whitelist_2.png"
                         alt="whitelist-system"
                         loading="lazy"
                         class="project-pic"
@@ -108,7 +108,7 @@
               <div class="project-container project-card">
                 <a href="#contact">
                   <img
-                        src="assets/images/war.png"
+                        src="assets/images/war_2.png"
                         alt="war-system"
                         loading="lazy"
                         class="project-pic"
@@ -124,7 +124,7 @@
             <div class="project-container project-card">
                 <a href="https://github.com/ruisurat/rui-capture-system">
                 <img
-                      src="assets/images/capture.png"
+                      src="assets/images/capture_2.png"
                       alt="ctf-system"
                       loading="lazy"
                       class="project-pic"
@@ -137,6 +137,23 @@
                       Requires some Lua knowledge to configure.
                   </p>
             </div>
+
+            <div class="project-container project-card">
+              <a href="#">
+              <img
+                    src="assets/images/ruiui.png"
+                    alt="ruisu-ui"
+                    loading="lazy"
+                    class="project-pic"
+                />
+              </a>
+
+                <h3 class="project-title">RuiUI</h3>
+                <p class="project-details">
+                    I'm currently working on a custom UI library that replaces VGUI elements with a more modern look. If interested in using this for your own addons, feel free to contact me.
+                    An example of this UI library can be seen from the Whitelist System.
+                </p>
+          </div>
           </div>
       </section>
 
