added emojis to certain text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             class="hero-img"
           />
           <div class="bio animate_animated animate_shakeX">
-              <h2 class="bio-title">About Me</h2>
+              <h2 class="bio-title">About Me 👀</h2>
               <p class="bio-text">
                 Hi there, I'm ruisu AKA Lewis. I'm an 18 year old Computing student who enjoys experimenting with C#, Java, Lua, HTML and Python.
                 I like to create a lot of custom scripts for Garry's Mod, and hope to begin creating on s&box at some point.
@@ -87,7 +87,7 @@
 
       <!--Projects-->
       <section class="projects" id="projects">
-          <h2 class="projects-title">What I'm working on!</h2>
+          <h2 class="projects-title">What I'm working on! 🤓</h2>
           <div class="projects-container">
               <div class="project-container project-card">
                 <a href="#contact">
@@ -99,7 +99,7 @@
                     />
                   </a>
 
-                    <h3 class="project-title">Whitelist System</h3>
+                    <h3 class="project-title">Whitelist System 🏳️</h3>
                     <p class="project-details">
                         A lightweight and easy-to-use private whitelist system built for Garry's Mod servers that I work on. For details
                         on acquiring this product please contact me.
@@ -115,7 +115,7 @@
                     />
                   </a>
 
-                  <h3 class="project-title">War System</h3>
+                  <h3 class="project-title">War System ⚔️</h3>
                   <p class="project-details">
                       Completely custom war system for MilitaryRP servers with built-in objectives such as conquest, intel, and more. This is 
                       a W.I.P project, if you'd like this for your server please contact me.
@@ -131,7 +131,7 @@
                   />
                 </a>
 
-                  <h3 class="project-title">CTF System</h3>
+                  <h3 class="project-title">CTF System 🏁</h3>
                   <p class="project-details">
                       An extremely basic 'Capture the Flag' system which is essentially an early version of the War System. If interested, you can download it from my GitHub.
                       Requires some Lua knowledge to configure.
@@ -148,7 +148,7 @@
                 />
               </a>
 
-                <h3 class="project-title">RuiUI</h3>
+                <h3 class="project-title">RuiUI 💠</h3>
                 <p class="project-details">
                     I'm currently working on a custom UI library that replaces VGUI elements with a more modern look. If interested in using this for your own addons, feel free to contact me.
                     An example of this UI library can be seen from the Whitelist System.
@@ -159,7 +159,7 @@
 
       <!--Contact-->
       <section class="contact" id="contact">
-          <h2>Get in Touch</h2>
+          <h2>Get in Touch 🤙</h2>
           <div class="contact-form-container">
               <div class="contact-form">
                   <form action="https://formspree.io/f/xyylraeg" method="POST">
@@ -229,7 +229,7 @@
       <footer>
         <p class="copy">&copy; Copyright 2021</p>
         <p class="copy">
-          Built with &#x2661 by
+          Built with 💖 by
           <a href="https://twitter.com/ruisuttv" target="_blank">
             ruisu
           </a>
