--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
       /></a>
       </div>
 
+      <h1 class="spotify-header">the vibe rn</h1> 
+      <iframe class="spotify-player" src="https://open.spotify.com/embed/track/0DwVfCYLrVXgvejYbWwZAd" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
       <!--Footer-->
       <footer>
         <p class="copy">&copy; Copyright 2021</p>
