--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <!--Navbar-->
         <nav>
-            <h1>ruisu</h1>
+            <h1>ruisu.</h1>
             <ul class="navigation">
               <li><a href="#about" class="nav-link">About</a></li>
               <li><a href="#projects" class="nav-link">Projects</a></li>
