--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <!--Navbar-->
         <nav>
-            <h1>ruisu.</h1>
+            <h1 class="nav-header animate__animated animate__jello"></h1>
             <ul class="navigation">
               <li><a href="#about" class="nav-link">About</a></li>
               <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -55,9 +55,9 @@
             src="assets/images/8fa.png"
             alt="ruisu"
             loading="lazy"
-            class="hero-img"
+            class="hero-img animate__animated animate__wobble"
           />
-          <div class="bio animate_animated animate_shakeX">
+          <div class="bio animate__animated animate__pulse">
               <h2 class="bio-title">About Me 👀</h2>
               <p class="bio-text">
                 Hi there, I'm ruisu AKA Lewis. I'm an 18 year old Computing student who enjoys experimenting with C#, Java, Lua, HTML and Python.
