fixed a spelling mistake

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 />
               </a>
 
-              <h3 class="service-title">Custom Addon</h3>
+              <h3 class="service-title">Custom Addons</h3>
               <p class="service-details">
                   I will code you a custom addon based on the requirements you give me. Contact me for a quote. Price is subject to change depending on addon complexity etc.
               </p>
