added bounty system

--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
       <section class="projects" id="projects">
           <h2 class="projects-title">What I'm working on! 🤓</h2>
           <div class="projects-container">
+            <div class="project-container project-card">
+              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2659758397">
+                <img
+                      src="assets/images/bounty.jpg"
+                      alt="whitelist-system"
+                      loading="lazy"
+                      class="project-pic"
+                  />
+                </a>
+
+                  <h3 class="project-title">Bounty System 🏳️</h3>
+                  <p class="project-details">
+                      A system similar to the GTA V mental state mechanic. Implements a killstreak type system that marks players with a certain killcount. Can be downloaded now on the Steam Workshop.
+                  </p>
+            </div>
+          <div class="projects-container">
               <div class="project-container project-card">
                 <a href="#contact">
                   <img
