--- a/index.html
+++ b/index.html
@@ -99,11 +99,26 @@
                   />
                 </a>
 
-                  <h3 class="project-title">Bounty System 🏳️</h3>
+                  <h3 class="project-title">Bounty System ☠️</h3>
                   <p class="project-details">
                       A system similar to the GTA V mental state mechanic. Implements a killstreak type system that marks players with a certain killcount. Can be downloaded now on the Steam Workshop.
                   </p>
             </div>
+            <div class="project-container project-card">
+              <a href="#contact">
+                <img
+                      src="assets/images/war.jpg"
+                      alt="war-system"
+                      loading="lazy"
+                      class="project-pic"
+                  />
+                </a>
+
+                <h3 class="project-title">War System ⚔️</h3>
+                <p class="project-details">
+                    Modular war base built to allow servers to easily integrate their own "warmodes". Currently a private project, but will be released to the public in future. Will be priced at roughly $25.
+                </p>
+          </div>
           <div class="projects-container">
               <div class="project-container project-card">
                 <a href="#contact">
@@ -121,22 +136,7 @@
                         on acquiring this product please contact me.
                     </p>
               </div>
-              <div class="project-container project-card">
-                <a href="#contact">
-                  <img
-                        src="assets/images/war_2.png"
-                        alt="war-system"
-                        loading="lazy"
-                        class="project-pic"
-                    />
-                  </a>
-
-                  <h3 class="project-title">War System ⚔️</h3>
-                  <p class="project-details">
-                      Completely custom war system for MilitaryRP servers with built-in objectives such as conquest, intel, and more. This is 
-                      a W.I.P project, if you'd like this for your server please contact me.
-                  </p>
-            </div>
+              
             <div class="project-container project-card">
                 <a href="https://github.com/ruisurat/rui-capture-system">
                 <img
