--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="bio animate__animated animate__pulse">
               <h2 class="bio-title">About Me 👀</h2>
               <p class="bio-text">
-                Hi there, I'm ruisu AKA Lewis. I'm an 18 year old Computing student who enjoys experimenting with C#, Java, Lua, HTML and Python.
+                Hi there, I'm ruisu AKA Lewis. I'm a 19 year old Computing student who enjoys experimenting with C#, Java, Lua, HTML and Python.
                 I like to create a lot of custom scripts for Garry's Mod, and hope to begin creating on s&box at some point.
               </p>
           </div>
